<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="viewModel"
            type="com.triviaapp.viewModel.FirstPageViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".quizPage.QuizPage">

        <TextView
            android:id="@+id/tv_q1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/q1"
            android:textSize="@dimen/text_20"
            android:textColor="@color/black"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_margin="@dimen/val_10"/>

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rg_g1"
            app:layout_constraintTop_toBottomOf="@id/tv_q1"
            app:layout_constraintStart_toStartOf="@id/tv_q1"
            android:layout_marginTop="@dimen/val_10">
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rb_op1"
                android:text="@string/q1_op1"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rb_op2"
                android:text="@string/q1_op2"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rb_op3"
                android:text="@string/q1_op3"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rb_op4"
                android:text="@string/q1_op4"/>
        </RadioGroup>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_next"
            android:text="@string/title_next"
            app:layout_constraintTop_toBottomOf="@id/rg_g1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="@dimen/val_20"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>